--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "codegraph-mcp-server"
-version = "0.2.0"
+version = "0.3.0"
 requires-python = ">=3.11"
 description = "MCP Server for code graph analysis with GraphRAG capabilities"
 authors = [
@@ -31,6 +31,12 @@ dependencies = [
     "tree-sitter-rust>=0.21.0",
     "tree-sitter-go>=0.21.0",
     "tree-sitter-java>=0.21.0",
+    # v0.3.0: PHP, C#, C++, HCL, Ruby
+    "tree-sitter-php>=0.21.0",
+    "tree-sitter-c-sharp>=0.21.0",
+    "tree-sitter-cpp>=0.21.0",
+    "tree-sitter-hcl>=0.21.0",
+    "tree-sitter-ruby>=0.21.0",
     
     # Database & Storage (ADR-002)
     "aiosqlite>=0.19.0",
@@ -233,6 +239,13 @@ module = [
     "tree_sitter_javascript.*",
     "tree_sitter_typescript.*",
     "tree_sitter_rust.*",
+    "tree_sitter_go.*",
+    "tree_sitter_java.*",
+    "tree_sitter_php.*",
+    "tree_sitter_c_sharp.*",
+    "tree_sitter_cpp.*",
+    "tree_sitter_hcl.*",
+    "tree_sitter_ruby.*",
     "networkx.*",
     "tiktoken.*",
     "watchfiles.*",
