--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "codegraph-mcp-server"
-version = "0.3.0"
+version = "0.4.0"
 requires-python = ">=3.11"
 description = "MCP Server for code graph analysis with GraphRAG capabilities"
 authors = [
@@ -48,6 +48,9 @@ dependencies = [
     # Graph Algorithms (ADR-005)
     "networkx>=3.0",
     
+    # CLI Progress Display
+    "rich>=13.0.0",
+    
     # Vector Operations
     "numpy>=1.24.0",
     
@@ -55,7 +58,6 @@ dependencies = [
     "tiktoken>=0.5.0",
     "watchfiles>=0.21.0",
     "gitpython>=3.1.0",
-    "rich>=13.0.0",
     "typer>=0.9.0",
 ]
 
