fix: use pyproject.toml mypy config in CI
Remove --ignore-missing-imports flag since settings are now in pyproject.toml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run type checking
         run: |
-          mypy src/codegraph_mcp --ignore-missing-imports
+          mypy src/codegraph_mcp
 
       - name: Run tests
         run: |
