feat: add Kotlin, Swift, Scala, Lua language support (16 languages total)
- Add KotlinExtractor for .kt, .kts files
- Add SwiftExtractor for .swift files
- Add ScalaExtractor for .scala, .sc files
- Add LuaExtractor for .lua files
- Update parser.py with all 16 language parsers
- Update dependencies in pyproject.toml
- Bump version to 0.8.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "codegraph-mcp-server"
-version = "0.7.3"
+version = "0.8.0"
 requires-python = ">=3.11"
 description = "MCP Server for code graph analysis with GraphRAG capabilities"
 authors = [
@@ -37,6 +37,11 @@ dependencies = [
     "tree-sitter-cpp>=0.21.0",
     "tree-sitter-hcl>=0.21.0",
     "tree-sitter-ruby>=0.21.0",
+    # v0.8.0: Kotlin, Swift, Scala, Lua
+    "tree-sitter-kotlin>=1.0.0",
+    "tree-sitter-swift>=0.0.1",
+    "tree-sitter-scala>=0.20.0",
+    "tree-sitter-lua>=0.1.0",
     
     # Database & Storage (ADR-002)
     "aiosqlite>=0.19.0",
